<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snypir Callback</string>
    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="snypir">Snypir</string>
    <string name="search">Search</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="snype">Snype</string>
    <string name="call_for_bubbles">Call for bubbles</string>
    <string name="send_invitation">Send invitation</string>
    <string name="send_invitation_description">Invite %s to Snype and communicate for free.</string>
    <string name="invitation_text">Hi! Write you from Snypir! Find it somewhere, it\'s really cool!</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="plus">+</string>
    <string name="confirm">Confirm</string>
    <string name="wrong_confirmation_code_try_one_more_time">Wrong confirmation code, try one more time</string>
    <string name="please_register">Please log in for better Snypir experience</string>
    <string name="choose_number">Choose number</string>
    <string name="number_deleted">Number deleted</string>
    <string name="enter_confirmation_code">Enter phones last 4 digits</string>
    <string name="all_numbers_already_favorite">No numbers to add to Favorites</string>
    <string name="credits">Credits</string>
    <string name="click_to_add_bubbles">Click to get bubbles</string>
    <string name="callback">Callback</string>
    <string name="change_callback_status">Change callback status</string>
    <string name="logout">Log out</string>
    <string name="contact_info">Contact information</string>
    <string name="login">Login</string>
    <string name="purchase">Purchase</string>
    <string name="retry">Retry</string>
    <string name="my_numbers">My numbers</string>
    <string name="add_number">Add number</string>
    <string name="account">Account</string>
    <string name="your_main_number">Your main number</string>
    <string name="phone_hint">+7 XXX XXX XX-XX</string>
    <string name="number_should_start_with_plus">Mobile number should start with \'+\'</string>
    <string name="mobile_number_should_be_11_digits_minimum">Mobile number should be at least 11 digits</string>
    <string name="secondary_number">Secondary number</string>
    <string name="delete">Delete</string>
    <string name="choose_items_to_delete">Choose items to delete</string>
    <string name="register_sim">Register SIM</string>
    <string name="how_to_title">How to become roaming ninja</string>
    <string name="call_free_to_registered_users">Call other ninjas without limits</string>
    <string name="buy_subscription">Subscribe</string>
    <string name="add_credits">Add credits</string>
    <string name="call_free_to_other_users">Call all your contacts</string>
    <string name="tune_your_operator">Setup your operator</string>
    <string name="activate_freee_incoming_calls">Activate free incoming calls</string>
    <string name="you_have">Your credits:</string>
    <string name="cr">cr.</string>
    <string name="add_sim">ADD SIM</string>
    <string name="operators_screen_description">We help you to choose cheapest incoming calls from your operator</string>
    <string name="choose_operator">Choose your operator:</string>
    <string name="MTS">MTS</string>
    <string name="megafon">Megafon</string>
    <string name="beeline">Beeline</string>
    <string name="other">Other</string>
    <string name="reg_sim_first">Register your sim first</string>
    <string name="turbo_mode">Turbo mode</string>
    <string name="turbo_description">Стоимость исходящих и входящих звонков списывается напрямую с твоего счета после окончания кредитов включается подписка</string>
    <string name="subscription_ends">Окончание подписки</string>
    <string name="crash_msg">Произошла ошибка, отправьте нам отчет и мы обязательно ее исправим</string>

</resources>
