<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextMediumCaps.Orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/operators_screen_description" />

    <TextView
        style="@style/TextMediumCaps.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/choose_operator" />

    <android.support.v7.widget.CardView
        style="@style/OperatorCard"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="4dp">

        <TextView
            style="@style/TextLargeCaps.Center"
            android:text="@string/MTS" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OperatorCard"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="4dp">

        <TextView
            style="@style/TextLargeCaps.Center"
            android:text="@string/megafon" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OperatorCard"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="4dp">

        <TextView
            style="@style/TextLargeCaps.Center"
            android:text="@string/beeline" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OperatorCard"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="4dp">

        <TextView
            style="@style/TextLargeCaps.Center"
            android:text="@string/other" />
    </android.support.v7.widget.CardView>

</LinearLayout>