<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:id="@+id/image"/>

        <TextView
            android:layout_toRightOf="@+id/image"
            android:id="@+id/text1"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_snype"
        android:text="@string/snype"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/lay_phones"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_call"
        android:text="@string/call_for_bubbles"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_to_favorites"
        android:text="@string/add_to_favorites"/>

    <TextView
        android:id="@+id/txt_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_invitation_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sent_invitation"
        android:text="@string/send_invitation"/>

</LinearLayout>